626 - Update Important Fossil Area details card, make IFA template map template

--- a/src/bcfms/bcfms/templates/views/report-templates/bcfms_default.htm
+++ b/src/bcfms/bcfms/templates/views/report-templates/bcfms_default.htm
@@ -38,6 +38,10 @@
                 <!--div>Publication</div-->
                 {% include 'views/report-templates/details/contributor.htm' %}
                 <!-- /ko -->
+                <!-- ko if: report.get('name') == "Important Fossil Area" -->
+                <!--div>Important Fossil Area</div-->
+                {% include 'views/report-templates/details/important_fossil_area.htm' %}
+                <!-- /ko -->
             </div>
         </div>
     </div>
