639 - First cut at fixing IPA details tab formatting

--- a/src/bcfms/bcfms/media/css/project.css
+++ b/src/bcfms/bcfms/media/css/project.css
@@ -44,3 +44,8 @@ dl.stratigraphy > dd > div.stratigraphy-level > div
    color: rgb(120,120,120);
    font-style: italic;
 }
+
+
+.bc-details-tab dt {
+   width: 300px !important;
+}
