639 - Add map header, add conditional formatting, fix boolean datatype logic

--- a/src/bcfms/bcfms/media/css/project.css
+++ b/src/bcfms/bcfms/media/css/project.css
@@ -49,3 +49,8 @@ dl.stratigraphy > dd > div.stratigraphy-level > div
 .bc-details-tab dt {
    width: 300px !important;
 }
+
+.empty-section {
+   color: lightgray !important;
+   font-style: italic;
+}
