--- a/src/bcfms/bcfms/templates/views/report-templates/details/important_fossil_area.htm
+++ b/src/bcfms/bcfms/templates/views/report-templates/details/important_fossil_area.htm
@@ -1,4 +1,4 @@
-<div class="bc-map-thumbnail" data-bind="visible: nodesHaveData('description_n1')">
+<div class="bc-map-thumbnail">
     <dl class="dl-vertical dl-vertical-bc" >
         <dt>Location</dt>
         <dd>
