967 - Added condition for internal users to hide sections on the details tab for bcrhp

--- a/src/common/media/css/project_common.css
+++ b/src/common/media/css/project_common.css
@@ -101,6 +101,10 @@ table.bc-summary-table td {
     display: inline-block;
 }
 
+.hide-section {
+    display: none;
+}
+
 .grid-col-1 {
     grid-column-start: 1;
 }
