948 - Added print rule for showing all sections on the details tabs for internal users when printing the page

--- a/src/common/media/css/project_common.css
+++ b/src/common/media/css/project_common.css
@@ -380,6 +380,10 @@ img.bc-details-image
         display: none !important;
     }
 
+    .hide-section {
+        display: block;
+    }
+
     /* Align the date on the RHS next to the name of the site*/
     .ep-form-toolbar-tools {
         float: right !important;
