985 - Updating figure screenshots on bcrhp landing page

--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -225,8 +225,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                     <!-- Content -->
                     <figure class="splash-img">
-                        <img src="{% webpack_static 'img/front/figure1_map.png' %}"  alt="BCRHP Arches search screenshot">
-                        <figcaption>Figure 1: Interactive BC map of historic places.</figcaption>
+                        <img src="{% webpack_static 'img/front/figure1_map.jpg' %}"  alt="BCRHP Arches map screenshot">
+                        <figcaption>Figure 1: Interactive map of historic places in BC.</figcaption>
                     </figure>
 
 
@@ -295,8 +295,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
 
                     <!-- Content -->
                     <figure class="splash-img">
-                        <img class="sub-block-image" src="{% webpack_static 'img/front/figure2_filter.png' %}" alt="Arches Workflows">
-                        <figcaption>{% trans "Figure 2: Filter your searches by resource type using the dropdown menu." %}</figcaption>
+                        <img class="sub-block-image" src="{% webpack_static 'img/front/figure2_filter.jpg' %}" alt="Arches Workflows">
+                        <figcaption>{% trans "Figure 2: Filter search by local government. Showing map card pop-up for Nelson Street Grids." %}</figcaption>
                     </figure>
 
                 </div>
@@ -321,8 +321,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     </div>
 
                     <figure class="splash-img">
-                        <img class="sub-block-image" src="{% webpack_static 'img/front/BV1-STREETwSTAGE5x7.png' %}" alt='{% trans "View of Barkerville main street with stage coach" %} '>
-                        <figcaption>{% trans "Barkerville main street" %}</figcaption>
+                        <img class="sub-block-image" src="{% webpack_static 'img/front/Grist_Mill.jpg' %}" alt='{% trans "View of the Grist Mill located in Keremeos" %} '>
+                        <figcaption>{% trans "Grist Mill at Keremeos" %}</figcaption>
                     </figure>
 
 
