985 - Added figure 4 image for bcrhp landing page

--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -345,8 +345,8 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                     </div>
                     <!-- Content -->
                     <figure class="splash-img">
-                        <img class="sub-block-image" src="{% webpack_static 'img/front/figure4_popup.png' %}" alt='{% trans "Screenshot of Arches highlighted site" %} '>
-                        <figcaption>{% trans "Figure 4: An ARCHES highlighted site (Dominion Astrophysical Observatory) shown with location card pop-up." %}</figcaption>
+                        <img class="sub-block-image" src="{% webpack_static 'img/front/figure4_details.jpg' %}" alt='{% trans "Screenshot of Arches details view" %} '>
+                        <figcaption>{% trans "Figure 4: National Historic Site search showing Fisgard Lighthouse details page." %}</figcaption>
                     </figure>
                 </div>
             </section>
