--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
@@ -61,7 +61,7 @@
     <!-- /ko -->
     <!-- /ko -->
 </div>
-<div class="rp-card-section {% if user.username != 'anonymous' %}hide-section{% endif %}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
     <!-- ko let: {targetSection: 'site_name_section', sectionController: siteNamesVisible} -->
     <span class="rp-tile-title">Site Name</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
