--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site_public.htm
@@ -136,7 +136,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section {% if user.username != 'anonymous' %}hide-section{% endif %}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
     <!-- ko let: {targetSection: 'borden_number_section', sectionController: bordenNumberVisible} -->
     <span class="rp-tile-title">Site ID Number</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -274,7 +274,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section {% if user.username != 'anonymous' %}hide-section{% endif %}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
     <!-- ko let: {targetSection: 'chronology_section', sectionController: chronologyVisible} -->
     <span class="rp-tile-title">Chronology</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -307,7 +307,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section {% if user.username != 'anonymous' %}hide-section{% endif %}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
     <!-- ko let: {targetSection: 'sos_section', sectionController: sosVisible} -->
     <span class="rp-tile-title">Statement of Significance</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -368,7 +368,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section {% if user.username != 'anonymous' %}hide-section{% endif %}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
     <!-- ko let: {targetSection: 'heritage_class_section', sectionController: heritageClassVisible} -->
     <span class="rp-tile-title">Heritage Class</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -421,7 +421,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section {% if user.username != 'anonymous' %}hide-section{% endif %}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
     <!-- ko let: {targetSection: 'heritage_function_section', sectionController: heritageFunctionVisible} -->
     <span class="rp-tile-title">Heritage Function</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -466,7 +466,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section {% if user.username != 'anonymous' %}hide-section{% endif %}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
     <!-- ko let: {targetSection: 'heritage_theme_section', sectionController: heritageThemeVisible} -->
     <span class="rp-tile-title">Heritage Theme</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
