--- a/src/bcrhp/dot.env.j2
+++ b/src/bcrhp/dot.env.j2
@@ -84,6 +84,7 @@ OAUTH_TOKEN_ENDPOINT={{ oauth_token_endpoint }}
 OAUTH_JWKS_URI={{ oauth_jwks_uri }}
 OAUTH_CLIENT_ID={{ oauth_client_id }}
 OAUTH_CLIENT_SECRET={{ oauth_client_secret }}
+OAUTH_REDIRECT_DOMAINS={{ oauth_redirect_domains }}
 
 #Only for dev - this allows the app URL to be HTTP
 #OAUTHLIB_INSECURE_TRANSPORT=True
