910 - Lookup search earl by name on unauthorized page

--- a/src/bcrhp/bcrhp/templates/unauthorized.htm
+++ b/src/bcrhp/bcrhp/templates/unauthorized.htm
@@ -50,7 +50,7 @@
                 <main>
                     <div>
                         <div>You are not authorized to login to the system. Only anonymous access is permitted.</div>
-                        <div class="system-link"><a href="/bcrhp/search">Return to the system here.</a></div>
+                        <div class="system-link"><a href="{% url 'search_home' %}">Return to the system here.</a></div>
                     </div>
                 </main>
             </div>
