--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -92,20 +92,20 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         <li>
                             <a href="{% url 'search_home' %}">{% trans "Search Sites" %}</a>
                         </li>
-                        {% if user|can_create_resource_instance and user.username != 'anonymous' %}
-                            <li>
-                                <a href="{% url 'resource' %}" target="_blank">{% trans "Manage" %}</a>
-                            </li>
+                        {% if user.username and user.username != 'anonymous' %}
+                        {% if user|can_create_resource_instance %}
+                        <li>
+                            <a href="{% url 'resource' %}" target="_blank">{% trans "Manage" %}</a>
+                        </li>
                         {% endif %}
-                        {% if user.username %}
-                            <li>
-                                <a class="auth-welcome" href="{% url 'user_profile_manager' %}">
-                                    {% trans "Welcome, " %} {{ user.first_name|default:user.username }}
-                                </a>
-                            </li>
-                            <!--li>
-                                <a class="application-login" href="{% url 'auth' %}?next={% url 'home' %}{% if user.username != 'anonymous' %}&logout=true{% endif %}">{% trans 'Log off' %}</a>
-                            </li-->
+                        <li>
+                            <a class="auth-welcome" href="{% url 'user_profile_manager' %}">
+                                {% trans "Welcome, " %} {{ user.first_name|default:user.username }}
+                            </a>
+                        </li>
+                        <!--li>
+                            <a class="application-login" href="{% url 'auth' %}?next={% url 'home' %}{% if user.username != 'anonymous' %}&logout=true{% endif %}">{% trans 'Log off' %}</a>
+                        </li-->
                         {% endif %}
                         {% if show_language_swtich %}
                             <li>
