944 - Updated landing page with requested changes
- Reorder manual image order
- Adjust spacing between header and text for sections

--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -251,17 +251,17 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <div class="app-info-manual">
                                 <div class="app-info-manual-item">
                                     <a href="">
-                                        <img alt="How to Search Guide" src="{% webpack_static 'img/front/manual-with-text-1.jpg' %}" />
+                                        <img alt="How to Search PDF Guide" src="{% webpack_static 'img/front/manual-with-text-1.jpg' %}" />
                                     </a>
                                 </div>
                                 <div class="app-info-manual-item">
                                     <a href="">
-                                        <img alt="Advanced Search Guide" src="{% webpack_static 'img/front/manual-with-text-2.jpg' %}" />
+                                        <img alt="Basic Search Video Guide" src="{% webpack_static 'img/front/manual-with-text-2.jpg' %}" />
                                     </a>
                                 </div>
                                 <div class="app-info-manual-item">
                                     <a href="">
-                                        <img alt="Basic Search Guide" src="{% webpack_static 'img/front/manual-with-text-3.jpg' %}" />
+                                        <img alt="Advanced Search Video Guide" src="{% webpack_static 'img/front/manual-with-text-3.jpg' %}" />
                                     </a>
                                 </div>
                             </div>
