944 - Fixed text spacing in certain sections on the bcrhp landing page
Reverted header spacing.

--- a/src/bcrhp/bcrhp/templates/index.htm
+++ b/src/bcrhp/bcrhp/templates/index.htm
@@ -280,7 +280,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <div class="app-info-block-intro">
                                 <h3 class="app-info-block-title">{% trans "Local Government Historic Places" %}</h3>
                                 <p class="app-info-block-text">
-                                    {% trans "Under the" %} <a target="lgact" href="https://www.bclaws.gov.bc.ca/civix/document/id/consol21/consol21/96323_31">{% trans "Local Government Act" %}</a>{% trans "and the" %} <a target="vancharter" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/vanch_29">{% trans "Vancouver Charter" %}</a>{% trans ", local governments can formally protect and recognize places with local or regional heritage significance, primarily through municipal designation and community heritage register listings. Local governments notify the province of recognized municipal historic places so they can be added to the BC Register of Historic Places." %}
+                                    {% trans "Under the" %} <a target="lgact" href="https://www.bclaws.gov.bc.ca/civix/document/id/consol21/consol21/96323_31">{% trans "Local Government Act" %}</a> {% trans "and the" %} <a target="vancharter" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/vanch_29">{% trans "Vancouver Charter" %}</a>{% trans ", local governments can formally protect and recognize places with local or regional heritage significance, primarily through municipal designation and community heritage register listings. Local governments notify the province of recognized municipal historic places so they can be added to the BC Register of Historic Places." %}
                                 </p>
                             </div>
                     </div>
@@ -312,7 +312,7 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                             <div class="app-info-block-intro">
                                 <h3 class="app-info-block-title">{% trans "Provincial Historic Places" %}</h3>
                                 <p class="app-info-block-text">
-                                    {% trans "Under the " %} <a target="hca" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96187_01">{% trans "Heritage Conservation Act" %} </a> {% trans ", the province protects historic places with provincial-level heritage significance in several ways, primarily through designation as provincial heritage property (Crown land) or provincial heritage sites (non-Crown land)."%}
+                                    {% trans "Under the " %} <a target="hca" href="https://www.bclaws.gov.bc.ca/civix/document/id/complete/statreg/96187_01">{% trans "Heritage Conservation Act" %}</a>{% trans ", the province protects historic places with provincial-level heritage significance in several ways, primarily through designation as provincial heritage property (Crown land) or provincial heritage sites (non-Crown land)."%}
                                 </p>
                                 <p class="app-info-block-text">
                                     {% trans "In British Columbia, there are over 50 provincial heritage designations for historic places under the Heritage Conservation Act." %}
@@ -361,10 +361,10 @@ along with this program. If not, see <http://www.gnu.org/licenses/>.
                         <div class="app-info-block-intro">
                             <h3 class="app-info-block-title">{% trans "Contact the Heritage Branch" %}</h3>
                             <p class="app-info-block-text">
-                                {% trans "For more information or to report any issues please contact the Heritage Branch at" %}<a target="mail_address" href="mailto:heritage@gov.bc.ca"> {% trans "heritage@gov.bc.ca" %}</a>{% trans "or visit our" %}<a target="heritage_branch" href="https://www2.gov.bc.ca/gov/content/governments/celebrating-british-columbia/historic-places"> {% trans "website." %}</a>
+                                {% trans "For more information or to report any issues please contact the Heritage Branch at" %}<a target="mail_address" href="mailto:heritage@gov.bc.ca"> {% trans "heritage@gov.bc.ca" %}</a> {% trans "or visit our" %}<a target="heritage_branch" href="https://www2.gov.bc.ca/gov/content/governments/celebrating-british-columbia/historic-places"> {% trans "website." %}</a>
                             </p>
                             <p class="app-info-block-text">
-                                {% trans "The Heritage Branch acknowledges it carries out its work on the traditional territories of Indigenous nations throughout British Columbia. We pay our respects to the Elders, past and present, descendants and custodians of these lands. We honour the knowledge keepers and the continuing relationships with Indigenous peoples in BC that develop through our work together. The Heritage Branch is grateful to the Lkwungen-speaking people, today known as the Esquimalt and Songhees First Nations, on whose traditional territories we operate our main offices." %}
+                                {% trans "The Heritage Branch acknowledges it carries out its work on the traditional territories of Indigenous nations throughout British Columbia. We pay our respects to the Elders, past and present, descendants and custodians of these lands. We honour the knowledge keepers and the continuing relationships with Indigenous peoples in BC that develop through our work together. The Heritage Branch is grateful to the Lekwungen-speaking people, today known as the Esquimalt and Songhees First Nations, on whose traditional territories we operate our main offices." %}
                             </p>
                         </div>
                     </div>
