--- a/src/bcfms/dot.env.j2
+++ b/src/bcfms/dot.env.j2
@@ -70,5 +70,15 @@ S3_ACCESS_KEY_ID={{ s3_access_key_id }}
 S3_SECRET_ACCESS_KEY={{ s3_secret_access_key }}
 S3_PROXIES={{ proxy_env.https_proxy }}
 
+# OAUTH/OIDC configuration
+OAUTH_AUTH_ENDPOINT={{ oauth_auth_endpoint }}
+OAUTH_TOKEN_ENDPOINT={{ oauth_token_endpoint }}
+OAUTH_JWKS_URI={{ oauth_jwks_uri }}
+OAUTH_CLIENT_ID={{ oauth_client_id }}
+OAUTH_CLIENT_SECRET={{ oauth_client_secret }}
+
+#Only for dev - this allows the app URL to be HTTP
+#OAUTHLIB_INSECURE_TRANSPORT=True
+
 #Local Tileserver config
 TILESERVER_OUTBOUND_PROXY={{ proxy_env.https_proxy }}
