1012 - Comment out all export formats but CSV

--- a/src/bcrhp/bcrhp/templates/views/components/search/search-export.htm
+++ b/src/bcrhp/bcrhp/templates/views/components/search/search-export.htm
@@ -37,6 +37,7 @@
                     <input type="radio" name="stat-w-label" data-bind="checked: format() === 'tilecsv'" value="true">
                     <span data-bind="text: $root.translations.csv"></span>
                 </label>
+                {% comment %}
                 <!-- ko if: hasExportHtmlTemplates() -->
                 <label role="radio" tabindex="0" class="form-radio form-normal form-text" 
                     data-bind="
@@ -105,6 +106,7 @@
                 </div>
                 <!-- /ko -->
                 <!-- /ko -->
+                {% endcomment %}
             </div>
         </div>
 
