1005 - Fix missing data on details tab

--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
@@ -454,7 +454,7 @@
                     </div>
                     <div>
                         <dt>Function Period</dt>
-                        <dd data-bind="component: { name: 'concept-select-widget',
+                        <dd data-bind="component: { name: 'concept-multiselect-widget',
                                                 params: {
                                                     value: tileValues['functional_state'],
                                                     state: 'display_value'
@@ -489,7 +489,7 @@
                 <div>
                     <dt>Heritage Theme</dt>
                     <dd>
-                        <span data-bind="component: { name: 'concept-select-widget',
+                        <span data-bind="component: { name: 'concept-multiselect-widget',
                                             params: {
                                                 value: getFirstNodeValue('heritage_theme'),
                                                 state: 'display_value'
