--- a/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
+++ b/src/bcrhp/bcrhp/templates/views/report-templates/details/heritage_site.htm
@@ -278,7 +278,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}, visible: nodesHaveData(['chronology'])">
     <!-- ko let: {targetSection: 'chronology_section', sectionController: chronologyVisible} -->
     <span class="rp-tile-title">Chronology</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -311,7 +311,8 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()},
+        visible: nodesHaveData(['significance_type','physical_description','heritage_value','defining_elements','document_location'])">
     <!-- ko let: {targetSection: 'sos_section', sectionController: sosVisible} -->
     <span class="rp-tile-title">Statement of Significance</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -327,14 +328,14 @@
     <div class="rp-card-section" data-bind="visible: sectionController, attr: {id: targetSection}">
         <div style="display: inline-flex; width: 100%; justify-content: space-between;">
             <dl class="dl-horizontal">
-                <div>
+                <div data-bind="visible: !!nodesHaveData(['significance_type'])">
                     <dt>Significance Type</dt>
                     <dd data-bind="component: {name: 'concept-select-widget',
                                         params: {value: getFirstNodeValue('significance_type'),
                                                  state: 'display_value'}
                                     }"></dd>
                 </div>
-                <div>
+                <div data-bind="visible: !!nodesHaveData(['physical_description'])">
                     <dt>Description</dt>
                     <dd data-bind="component: {name: 'rich-text-widget',
                        params: {value: getFirstNodeValue('physical_description'),
@@ -342,7 +343,7 @@
                                 displayfullvalue: true}
                        }"></dd>
                 </div>
-                <div>
+                <div data-bind="visible: !!nodesHaveData(['heritage_value'])">
                     <dt>Heritage Value</dt>
                     <dd data-bind="component: {name: 'rich-text-widget',
                        params: {value: getFirstNodeValue('heritage_value'),
@@ -350,7 +351,7 @@
                                 displayfullvalue: true}
                        }"></dd>
                 </div>
-                <div>
+                <div data-bind="visible: !!nodesHaveData(['defining_elements'])">
                     <dt>Character Defining Elements</dt>
                     <dd class="print-only" data-bind="component: {name: 'rich-text-widget',
                        params: {value: getFirstNodeValue('defining_elements'),
@@ -358,7 +359,7 @@
                                 displayfullvalue: true}
                        }"></dd>
                 </div>
-                <div>
+                <div data-bind="visible: !!nodesHaveData(['document_location'])">
                     <dt>Document Location</dt>
                     <dd class="print-only" data-bind="component: {name: 'text-widget',
                        params: {value: ko.unwrap(getFirstNodeValue('document_location')),
@@ -372,7 +373,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}, visible: nodesHaveData(['heritage_category','ownership'])">
     <!-- ko let: {targetSection: 'heritage_class_section', sectionController: heritageClassVisible} -->
     <span class="rp-tile-title">Heritage Class</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -425,7 +426,8 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()},
+                visible: nodesHaveData(['functional_category','functional_state'])">
     <!-- ko let: {targetSection: 'heritage_function_section', sectionController: heritageFunctionVisible} -->
     <span class="rp-tile-title">Heritage Function</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
@@ -470,7 +472,7 @@
     <!-- /ko -->
 </div>
 
-<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}">
+<div class="rp-card-section" data-bind="css: {'hide-section': !isAnonymous()}, visible: nodesHaveData(['heritage_theme'])">
     <!-- ko let: {targetSection: 'heritage_theme_section', sectionController: heritageThemeVisible} -->
     <span class="rp-tile-title">Heritage Theme</span>
     <i class="fa report-expander print-hide fa-angle-down" tabindex="0" role="button" data-target="site_name_section" data-bind="onEnterkeyClick, onSpaceClick, let: {sectionController: siteNamesVisible, targetSection: 'site_name_section'},
